Map: Explicitly asign `z-index: 0` to fix stacking issue with IE11.

--- a/client/styles/common/_map.scss
+++ b/client/styles/common/_map.scss
@@ -4,6 +4,7 @@
   left: 0;
   bottom: 0;
   right: 0;
+  z-index: 0;
 }
 
 .leaflet-container {
